Implemented selection for reference members

--- a/woost/admin/ui/actions.strings
+++ b/woost/admin/ui/actions.strings
@@ -81,6 +81,16 @@
     es: Añadir
     en: Add
 
+    [list]
+    ca: Llistar
+    es: Listar
+    en: List
+
+    [clear]
+    ca: Buidar
+    es: Vaciar
+    en: Clear
+
     [cancel]
     ca: Cancel·lar
     es: Cancelar
