Added the 'remove' action for collections

--- a/woost/admin/ui/actions.strings
+++ b/woost/admin/ui/actions.strings
@@ -81,6 +81,11 @@
     es: Añadir
     en: Add
 
+    [remove]
+    ca: Treure
+    es: Quitar
+    en: Remove
+
     [list]
     ca: Llistar
     es: Listar
