Add a default group for form fields without an explicit group

--- a/woost/models/item.strings
+++ b/woost/models/item.strings
@@ -21,6 +21,11 @@ en: Generic element
 
     [groups]
 
+        [item]
+        ca: General
+        es: General
+        en: General
+
         [administration]
         ca: Administració
         es: Administración
