Added the 'Element' and 'Thumbnail' columns

--- a/woost/admin/ui/listing.strings
+++ b/woost/admin/ui/listing.strings
@@ -1,6 +1,16 @@
 
 [woost.admin.ui.Listing]
 
+    [labelColumn]
+    ca: Element
+    es: Elemento
+    en: Element
+
+    [thumbnailColumn]
+    ca: Miniatura
+    es: Miniatura
+    en: Thumbnail
+
     [filterButton]
     ca: Filtres
     es: Filtros
